# chaos-webhook

./: .gitignore  Dockerfile  Justfile  Makefile  README.md  ci-build.sh  docker-compose.yml  env-example
etc/: config.toml  hooks.json
scripts/: build.sh  clean.sh  deploy.sh  start.sh  stop.sh  test.sh
sitescraper/: Cargo.toml  Justfile
sitescraper/src/: main.rs
tagparser/: .gitignore  Cargo.toml  Justfile  Makefile  go.mod  main.go  main.rs  main_test.go  mapper.go  mapper_test.go  models.go  parser.go  parser_test.go  reader.go  reader_test.go  writer.go
tagparser/data/: why-do-i-write.md
tagparser/src/: main.rs  models.rs  operators.rs
tagparser_r/: Cargo.toml  Justfile  main  main.rs
tagparser_r/data/: how-to-get-started-writing-online.md  note-taking-answers-three-questions.md  note-taking-process-towards-an-end.md  note-taking-tools-and-strategies.md  notes-are-a-means-to-an-end.md  notes-as-maps-or-boxes.md  parable-and-poetry-hit-harder-than-prose.md  reply-to-others.md  roth-divergent-series.md  ruminations-on-existence.md  short-stories-are-modern-parables.md  thoughts-on-online-note-taking.md  why-do-i-write.md
template/: build-site.sh  config-dev.toml  config-prod.toml  config-uat.toml  container-micropub.service  container-webhook.service  hooks-dev.json  hooks-prod.json  hooks-uat.json  hooks.json  pod-webhook.service  test-site.sh
tests/: chaos-theme-pull.json
webhook/: Dockerfile  hooks.json
