[package]
name = "tagparser_r"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
regex = "1.7.0"
toml = "0.5.10"
walkdir = "2"

[[bin]]
name = "tagparser_r"
path = "main.rs"
